tests/invalid/lexico_string_sin_cerrar.flow
// EXPECT: E101
workflow demo {
    var pais : string
    start -> revisar
    revisar -> end if pais == "PE
}
